修正发布问答评论为0的issue

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -16,7 +16,7 @@
         {{ question.content }}
     </p>
     <hr>
-    <h4>评论  (0):</h4>
+    <h4>评论  ({{ ques_answ}}):</h4>
     <form action="{{ url_for('add_answer') }}" method="post">
         <div class="form-group">
             <input name= "answer_content" type="text" class="form-control" placeholder="请填写评论">
